--- a/index.html
+++ b/index.html
@@ -6,7 +6,21 @@
     <title>webdev</title>
 </head>
 <body>
-<h1>hello world</h1>
-<h2>html</h2>
+<h2>Javascript Program</h2>
+
+<p>A <b>Javascript Program</b> is a list of 
+<b> statements </b> to be executed by a computer . 
+</p>
+
+<p id="demo"></p>
+<script>
+var x,y,z;
+x=5;
+y=6;
+z=x+y;
+
+document.getElementById("demo").innerHTML=
+" The value of z is " + z + ".";
+</script>
 </body>
 </html>
